# media-forge

./: .gitignore  CHANGELOG.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: file_cmd.rs  image_cmd.rs  mod.rs  tray_cmd.rs  watcher_cmd.rs
src-tauri/src/models/: media_file.rs  mod.rs  settings.rs
src-tauri/src/services/: image_processor.rs  mod.rs  watcher.rs
src/lib/: platform.ts  tray.ts  types.ts
src/lib/components/: FileDropZone.svelte  FileListItem.svelte  SegmentControl.svelte  Sidebar.svelte  SidebarItem.svelte  SliderControl.svelte  TitleBar.svelte  ToggleSwitch.svelte
src/lib/stores/: fileQueue.ts  navigation.ts  settings.ts  taskProgress.ts  watcher.ts
src/lib/utils/: fileSize.ts  fileType.ts  path.ts
src/lib/views/: AudioView.svelte  HistoryView.svelte  ImageView.svelte  SettingsView.svelte  VideoView.svelte  WatcherView.svelte  WatermarkView.svelte
